[package]
name = "whirlpool-cpi-sample"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi_sample"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.26.0"
anchor-spl = "=0.26.0"
whirlpool-cpi = { git = "https://github.com/yugure-orca/whirlpool-cpi", branch = "anchor/0.26.0" }

# MSRV related constraints (solana 1.14 uses Rust 1.62.0-dev)
solana-program = "<1.15"
