[package]
name = "whirlpool-cpi-sample"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool_cpi_sample"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi", branch = "anchor/0.30.1" }

solana-program = ">=1.18, <2"

# https://github.com/solana-labs/solana/issues/34609
ahash = "=0.8.11"
